Automatic code cleanup by IntelliJ IDEA, removing some warnings etc.